Make it different
Change the background and text in index.html, add and style credits

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
           <div class="col-lg-12 my-auto">
             <h1 class="text-uppercase faded">
-              <strong>the biggest startup event of the year</strong>
+              <strong>A website on the Internet</strong>
             </h1>
             <hr>
           </div>
@@ -48,6 +48,7 @@
         </div>
       </div>
     </header>
+    <a class="credit" href="https://unsplash.com/@simonlaunay?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Simon Launay"><span class="credit-span"><svg class="credit-svg" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span class="credit-second-span">Simon Launay</span></a>
 
   </body>
 
