--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
 			</div>
 			</form>
 			</div>
-
 			<!--End mc_embed_signup-->
           </div>
         </div>
       </div>
     </header>
-    <a class="credit" href="https://unsplash.com/@simonlaunay?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Simon Launay"><span class="credit-span"><svg class="credit-svg" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span class="credit-second-span">Simon Launay</span></a>
-
+    <footer>
+	       <div class="photo-credit">
+		      	 <a class="credit faded" href="https://unsplash.com/@simonlaunay?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Simon Launay">Photo credit</a>
+		      </div>	
+    </footer>
   </body>
-
 </html>
